Implement One-Sample Tests
- Fix OpenAPI Spec to represent current state of API
- Fix incorrect docker config
